
In 0.10:
--------
  patchlevel 19:
       - small fixes for swallowing
       - bugfix for  TitlebarPixmapActive
       - auto-iconify-on-focus-loss applies only for floating windows
         (like kde toolbars or kde menubars)
       - re-introduced explicit XUnmapWindow calls for the inner windows.
         This is important for video cards etc. I hope I did not break 
         anything.

  patchlevel 18:
       - transient windows become iconified if the main window loses
         the focus (and none of its transient gets it instead!)
       - combind history completion with kURLcompletion in minicli

       - minicli changes by Torben:
           - minicli does handle URLs now like http://....
           - minicli handles URLs like "www.xxx" or "ftp.xxxx"
           - minicli handles dirctories like "/home/weis"
           - minicli has tab completion ( use TAB and Ctrl+D )
           - minicli supports the URL man:
           - minicli understand #kill, this will search the
	             man page for kill and is a shortcut for man:kill

       - new options TitlebarPixmapActive/TitlebarPixmapInactive. Used
         for TitlebarLook=pixmap
       - few bugfixes for kwmpager
       - small fix in handling of windows which do not request the
         WM_DELETE_WINDOW protocol (Did YOU know XKillClient? %-} )

  patchlevel 17:
       - fixed a serious bug (crashing clients when dragging in 
         opaque mode)
       - tiny fix for gravity handling
       - *many* modifications to autoraise
       - fix for FocusFollowMouse
       - animation a bit faster
       - small fix for resize/move with the mouse 
       - works together with newest kfm to keep the root icons 
         lowered
       - small fix for setting the kwm_running property
       - fixed a very old bug: now you can press Control-F1
         Control-F2 Control-F1 Control-F2 Control-F1 Control-F2
         like a maniac without any windows loosing their frames :-)