@@ -129,7 +129,6 @@ public:
   void stickyTransientOf(Client* c, bool sticky);
 
   void iconifyFloatingOf(Client* c);
-  void unIconifyFloatingOf(Client* c);
 
 signals:
   void reConfigure();
